--- a/app/views/admin/users/components/_form.html.erb
+++ b/app/views/admin/users/components/_form.html.erb
@@ -1,15 +1,26 @@
 <div class="row">
   <div class="col-lg-12">
-    <%= form.label(:email) %>
-    <%= form.email_field(:email, class: 'form-control') %>
+    <%= form.label(:email, class: 'required-label') %>
+    <%= form.email_field(:email, class: 'form-control required', required: true) %>
   </div>
-  <div class="col-lg-6">
-    <%= form.label(:password) %>
-    <%= form.password_field(:password, class: 'form-control form-control-user') %>
-  </div>
-  <div class="col-lg-6">
-    <%= form.label(:password_confirmation) %>
-    <%= form.password_field(:password_confirmation, class: 'form-control form-control-user') %>
-  </div>
+  <% if action_name == 'new' %>
+    <div class="col-lg-6">
+      <%= form.label(:password, class: 'required-label') %>
+      <%= form.password_field(:password, class: 'form-control form-control-user required', required: true) %>
+    </div>
+    <div class="col-lg-6">
+      <%= form.label(:password_confirmation, class: 'required-label') %>
+      <%= form.password_field(:password_confirmation, class: 'form-control form-control-user required', required: true) %>
+    </div>
+  <% else %>
+    <div class="col-lg-6">
+      <%= form.label(:password) %>
+      <%= form.password_field(:password, class: 'form-control form-control-user') %>
+    </div>
+    <div class="col-lg-6">
+      <%= form.label(:password_confirmation) %>
+      <%= form.password_field(:password_confirmation, class: 'form-control form-control-user') %>
+    </div>
+  <% end %>
   <%= render('layouts/forms/person', person_form: person_form, address_form: address_form) %>
 </div>
