Fix tag html mail

--- a/app/views/user_mailer/new_user.erb
+++ b/app/views/user_mailer/new_user.erb
@@ -9,7 +9,7 @@
 
     <ul>
       <li>Para realizar login, basta acessar o site clicando <a href="<%= new_user_session_url %>">aqui</a></li>
-      <li>Seu login e senha por padrão é: <b><%= @user.email %><b></li>
+      <li>Seu login e senha por padrão é: <b><%= @user.email %></b></li>
       <li>Recomendamos alterar a senha após realizar o primeiro login por questão de segurança, basta clicar <a href="<%= edit_admin_user_url(@user) %>">aqui</a></li>
     </ul>
 
