Add id to document_number

--- a/app/views/layouts/forms/_person.html.erb
+++ b/app/views/layouts/forms/_person.html.erb
@@ -4,7 +4,7 @@
 </h4>
 <div class="col-lg-4">
   <%= person_form.label(:document_number, class: 'required-label') %>
-  <%= person_form.text_field(:document_number, class: 'form-control input-cpf required', required: true) %>
+  <%= person_form.text_field(:document_number, class: 'form-control input-cpf required', id: 'person_document_number', required: true) %>
 </div>
 <div class="col-lg-4">
   <%= person_form.label(:name, class: 'required-label') %>
