--- a/app/views/admin/users/components/_form.html.erb
+++ b/app/views/admin/users/components/_form.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-lg-12">
-    <%= form.label(:email, class: 'required-label') %>
-    <%= form.email_field(:email, class: 'form-control required', required: true) %>
-  </div>
   <% if not_persisted_action? %>
+    <div class="col-lg-12">
+      <%= form.label(:email, class: 'required-label') %>
+      <%= form.email_field(:email, class: 'form-control required', required: true) %>
+    </div>
     <div class="col-lg-6">
       <%= form.label(:password, class: 'required-label') %>
       <%= form.password_field(:password, class: 'form-control form-control-user required', required: true) %>
@@ -13,6 +13,10 @@
       <%= form.password_field(:password_confirmation, class: 'form-control form-control-user required', required: true) %>
     </div>
   <% else %>
+    <div class="col-lg-12">
+      <%= form.label(:email) %>
+      <%= form.email_field(:email, class: 'form-control required', disabled: true) %>
+    </div>
     <div class="col-lg-6">
       <%= form.label(:password) %>
       <%= form.password_field(:password, class: 'form-control form-control-user') %>
