--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -24,15 +24,15 @@
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
   transition: margin .25s ease-out;
-}
 
-#sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
-}
+  .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
+  }
 
-#sidebar-wrapper .list-group {
-  width: 13rem;
+  .list-group {
+    width: 13rem;
+  }
 }
 
 #page-content-wrapper {
@@ -50,6 +50,15 @@
 @media (min-width: 768px) {
   #sidebar-wrapper {
     margin-left: 0;
+
+    .sidebar-heading {
+      padding: 0.875rem 1.25rem;
+      font-size: 1.2rem;
+    }
+
+    .list-group {
+      width: 13rem;
+    }
   }
 
   #page-content-wrapper {
@@ -138,6 +147,10 @@
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
