TR-29 - Adicionar seleção de perfil antes de mostrar os menus (#23)
* Add route and controller

* Add layout

* Add select view

* Fix somethings

* Fix some things

* Fix rubocop lint

* Refactor to scss

* Refactor scss

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,10 @@
   </head>
 
   <body>
-    <% if current_user %>
+    <% if current_user && request.path != root_path %>
       <%= render partial: 'layouts/components/application' %>
+    <% elsif request.path == root_path %>
+      <%= render partial: 'layouts/components/select_enterprise' %>
     <% else %>
       <%= yield %>
     <% end %>
