--- a/app/views/admin/users/components/_document_table.html.erb
+++ b/app/views/admin/users/components/_document_table.html.erb
@@ -16,5 +16,25 @@
       <th><%= t('activerecord.attributes.person.identity_document_number') %></th>
       <td><%= @user.person.identity_document_number %></td>
     </tr>
+    <tr>
+      <th><%= t('activerecord.attributes.person.cnh_number') %></th>
+      <td><%= @user.person.cnh_number %></td>
+    </tr>
+    <tr>
+      <th><%= t('activerecord.attributes.person.cnh_record') %></th>
+      <td><%= @user.person.cnh_record %></td>
+    </tr>
+    <tr>
+      <th><%= t('activerecord.attributes.person.cnh_type') %></th>
+      <td><%= @user.person.cnh_type %></td>
+    </tr>
+    <tr>
+      <th><%= t('activerecord.attributes.person.cnh_issuing_state') %></th>
+      <td><%= @user.person.cnh_issuing_state %></td>
+    </tr>
+    <tr>
+      <th><%= t('activerecord.attributes.person.cnh_expires_at') %></th>
+      <td><%= l(@user.person.cnh_expires_at, default: '') %></td>
+    </tr>
   </tbody>
 </table>
