--- a/app/views/layouts/forms/_person.html.erb
+++ b/app/views/layouts/forms/_person.html.erb
@@ -1,4 +1,3 @@
-
 <h4 class="mt-3">
   Dados pessoais
 </h4>
@@ -30,6 +29,9 @@
   <%= person_form.label(:cell_number) %>
   <%= person_form.text_field(:cell_number, class: 'form-control input-cell-number') %>
 </div>
+<h4 class="mt-3">
+  Documentos
+</h4>
 <div class="col-lg-3">
   <%= person_form.label(:identity_document_type) %>
   <%= person_form.select(:identity_document_type, Person::IDENTITY_DOCUMENT_TYPES, { include_blank: 'Selecione um tipo' }, { class: 'form-control' }) %>
@@ -41,5 +43,25 @@
 <div class="col-lg-6">
   <%= person_form.label(:identity_document_number) %>
   <%= person_form.text_field(:identity_document_number, class: 'form-control') %>
+</div>
+<div class="col-lg-2">
+  <%= person_form.label(:cnh_number) %>
+  <%= person_form.text_field(:cnh_number, class: 'form-control') %>
+</div>
+<div class="col-lg-3">
+  <%= person_form.label(:cnh_record) %>
+  <%= person_form.text_field(:cnh_record, class: 'form-control') %>
+</div>
+<div class="col-lg-2">
+  <%= person_form.label(:cnh_type) %>
+  <%= person_form.select(:cnh_type, Person::CNH_TYPES.map(&:upcase), { include_blank: 'Selecione a categoria' }, { class: 'form-control'}) %>
+</div>
+<div class="col-lg-2">
+  <%= person_form.label(:cnh_issuing_state) %>
+  <%= person_form.select(:cnh_issuing_state, Address::STATES, { include_blank: 'Selecione um estado' }, { class: 'form-control'}) %>
+</div>
+<div class="col-lg-3">
+  <%= person_form.label(:cnh_expires_at) %>
+  <%= person_form.date_field(:cnh_expires_at, class: 'form-control') %>
 </div>
 <%= render('layouts/forms/address', address_form: address_form) %>
