Add button to redirect admin

--- a/app/views/layouts/components/_application.html.erb
+++ b/app/views/layouts/components/_application.html.erb
@@ -4,6 +4,11 @@
       <i class="bi bi-list"></i>
     </a>
     <div>
+      <% if can_access_admin? %>
+        <%= link_to(admin_root_path, class: 'btn text-secondary') do %>
+          <i class="bi bi-bar-chart"></i>
+        <% end %>
+      <% end %>
       <%= render partial: 'layouts/components/update_enterprise_modal' %>
       <%= render partial: 'layouts/components/dropdown_options' %>
     </div>
