--- a/app/views/admin/users/components/_contact_table.html.erb
+++ b/app/views/admin/users/components/_contact_table.html.erb
@@ -4,13 +4,28 @@
       <th><%= t('activerecord.attributes.user.email') %></th>
       <td><%= @user.email %></td>
     </tr>
-    <tr>
-      <th><%= t('activerecord.attributes.person.telephone_number') %></th>
-      <td><%= @user.person.telephone_number %></td>
-    </tr>
-    <tr>
-      <th><%= t('activerecord.attributes.person.cell_number') %></th>
-      <td><%= @user.person.cell_number %></td>
-    </tr>
+    <% @user.person.contacts.each_with_index do |contact, index| %>
+      <table class="table">
+        <tbody>
+          <tr>
+          <h6>Contato #<%= index + 1 %></h6>
+            <th><%= t('activerecord.attributes.contact.cell_number') %></th>
+            <td><%= contact.cell_number %></td>
+          </tr>
+          <tr>
+            <th><%= t('activerecord.attributes.contact.telephone_number') %></th>
+            <td><%= contact.telephone_number %></td>
+          </tr>
+          <tr>
+            <th><%= t('activerecord.attributes.contact.email') %></th>
+            <td><%= contact.email %></td>
+          </tr>
+          <tr>
+            <th><%= t('activerecord.attributes.contact.observation') %></th>
+            <td><%= contact.observation %></td>
+          </tr>
+        </tbody>
+      </table>
+    <% end %>
   </tbody>
 </table>
